# Guidestone

./: .gitignore  CMakeLists.txt  Cargo.toml
cmake/: shaders.cmake  vmahpp.cmake
crates/common/: Cargo.toml
crates/common/src/: model.rs
crates/common/src/math/: matrix.rs  num_traits.rs  vector.rs
crates/guidestone_core/: Cargo.toml
crates/guidestone_core/src/: camera.rs  engine.rs  fs.rs  input.rs  lib.rs  model.rs  universe.rs
crates/guidestone_core/src/math/: matrix.rs  mod.rs  num_traits.rs  vector.rs
crates/guidestone_core/src/model/: classic.rs
crates/guidestone_proc_macro/: Cargo.toml
crates/guidestone_proc_macro/src/: lib.rs
crates/guidestone_vulkan/: Cargo.toml
crates/guidestone_vulkan/src/: command.rs  device.rs  framebuffer.rs  instance.rs  lib.rs  render.rs
crates/guidestone_winit/: Cargo.toml
crates/guidestone_winit/src/: main.rs
crates/hw_import/: Cargo.toml
crates/hw_import/src/: big.rs  lib.rs  model.rs
crates/render_wgpu/: Cargo.toml  shaders.wgsl
crates/render_wgpu/src/: lib.rs
src/core/: engine.cpp  engine.hpp  fs.cpp  fs.hpp  input.cpp  log.cpp  math.cpp  math.hpp  model.hpp  model_classic.cpp  platform.hpp  render.hpp  types.hpp
src/core/active/: active.cpp  active.hpp  camera.hpp  input.cpp  input.hpp
src/engine/: camera.hpp  engine.cpp  engine.hpp  fs.cpp  fs.hpp  input.hpp  log.cpp  log.hpp  math.cpp  math.hpp  model.hpp  model_classic.cpp  platform.hpp  render.hpp
src/platform/SDL/: SDL_platform.cpp  SDL_platform.hpp  main.cpp
src/render/: render.cpp  render.hpp
src/render/vulkan/: command.cpp  command.hpp  context.cpp  context.hpp  device.cpp  device.hpp  framebuffer.cpp  framebuffer.hpp  render.cpp  render.hpp  storage.cpp  storage.hpp  swapchain.cpp  swapchain.hpp  uniform.cpp  vulkan_impl.cpp  vulkan_render.cpp  vulkan_render.hpp
src/render/vulkan/shaders/: default.frag  default.vert
src/render/vulkan/storage/: assets.cpp  assets.hpp  framebuffer.cpp  storage.cpp  storage.hpp  swapchain.cpp  uniform.hpp
