[workspace]
resolver = "2"
members = [
	"crates/common",
	"crates/guidestone_core",
	"crates/guidestone_winit",
	"crates/hw_import",
	"crates/render_wgpu",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[workspace.dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
glam = { version = "0.25", features = ["bytemuck"] }
log = "0.4"
