[package]
name = "guidestone_core"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
hw_import = { path = "../hw_import" }
bitflags = "2.4"
log = "0.4.20"
