[package]
name = "guidestone_core"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
hecs = "0.10.3"
hw_import = { path = "../hw_import" }
log = "0.4"
