[package]
name = "guidestone_vulkan"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
guidestone_core = { path = "../guidestone_core" }
ash = { git = "https://github.com/ash-rs/ash.git", branch = "update" }
log = "0.4"
