[package]
name = "guidestone_winit"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
guidestone_core = { path = "../guidestone_core" }
render_wgpu = { path = "../render_wgpu" }

env_logger = "0.11"
futures-lite = "2"
glam.workspace = true
log.workspace = true
winit = { version = "0.29" }
