[package]
name = "hw_import"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

binrw = "0.13"
bitflags = "2.4"
glam.workspace = true
log.workspace = true
