[package]
name = "render_wgpu"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
guidestone_core = { path = "../guidestone_core" }
wgpu = "0.19"
