[package]
name = "render_wgpu"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
guidestone_core = { path = "../guidestone_core" }

bytemuck.workspace = true
glam.workspace = true
log.workspace = true
wgpu = "0.19"
